<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ThermoPi</string>
    <string name="main_date">Date</string>
    <string name="main_set_temperature">Thermostat control</string>
    <string name="control_set_time">Set run time in minutes</string>
    <string name="control_set_time_hint">15</string>
    <string name="control_set_temperature">Set degrees celsius</string>
    <string name="control_set_temperature_hint">-</string>
    <string name="control_set_temperature_detail">* is the currently set temperature</string>
    <string name="control_set_temperature_current">Current temperature: %s</string>
    <string name="control_set_temperature_status">Current status: %s</string>
    <string name="control_list_cmd_time">Heat for %s minutes</string>
    <string name="control_list_cmd_temp">Set temperature to %s</string>
    <string name="control_radio_time">Time</string>
    <string name="control_radio_temperature">Temperature</string>
    <string name="control_submit">Set</string>
    <string name="control_text_debug_output">Debugging output</string>
    <string name="control_status_running_true">heating</string>
    <string name="control_status_running_false">off</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_save">Save</string>
    <string name="action_generate_nonce">Generate nonce</string>
    <string name="title_activity_main">Main</string>
    <string name="title_activity_settings">Settings</string>
    <string name="drawer_open">Choose</string>
    <string name="search_hint">Search</string>

    <string name="control_alert_dialog_missing_value_message">Please enter a value!</string>
    <string name="control_alert_dialog_server_error_title">Server Error</string>
    <string name="control_alert_dialog_server_error_message">Server returned an error!</string>
    <string name="control_alert_dialog_server_ok_message">Updated thermostat value!</string>
    <string name="control_alert_dialog_dismiss">Dismiss</string>

    <string name="control_hide_alert_dialog_title">Hide from list</string>
    <string name="control_hide_alert_dialog_positive">Hide</string>
    <string name="control_hide_alert_dialog_negative">Cancel</string>

    <string name="settings_shared_secret">Server shared secret</string>
    <string name="settings_gcm_token">GCM Token</string>
    <string name="settings_gcm_token.available">available</string>
    <string name="settings_gcm_token.not_available">not available</string>
    <string name="settings_location_name">Location name</string>
    <string name="settings_location_url_base">Server base URL</string>
    <string name="settings_restore_tab">Remember last selected tab</string>
    <string name="settings_server_debug_output">Enable server debugging output</string>
    <string name="settings_control_manual_input">Show manual input for control</string>
    <string name="settings_hide_reset_all_hidden">Show hidden control values</string>
    <string name="label_settings_control_temperature_minimum">Min</string>
    <string name="label_settings_control_temperature_maximum">Max</string>

    <string-array
        name="drawer_menu_items">
        <item>Current</item>
        <item>Log</item>
        <item>Control</item>
    </string-array>

</resources>
