<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/fragment_margin_left">
    <LinearLayout
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.ashtonandassociates.thermopi.SettingsActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:text="@string/settings_location_name"/>

        <EditText
            android:id="@+id/settings_location_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="..."/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_location_url_base"/>

        <EditText
            android:id="@+id/settings_url_base"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:hint="..."/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_shared_secret"/>

        <EditText
            android:id="@+id/settings_shared_secret"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="..."/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_settings_control_temperature_minimum"/>

            <EditText
                android:layout_weight="1"
                android:id="@+id/settings_control_temperature_minimum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="..."/>

            <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_settings_control_temperature_maximum"/>

            <EditText
                android:layout_weight="1"
                android:id="@+id/settings_control_temperature_maximum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="..."/>

        </LinearLayout>

        <CheckBox android:id="@+id/settings_restore_tab"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/settings_restore_tab"/>

        <CheckBox android:id="@+id/settings_control_manual_input"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/settings_control_manual_input"/>

        <CheckBox android:id="@+id/settings_server_debug_output"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/settings_server_debug_output"/>

        <Button
            android:id="@+id/settings_unhide_control_values"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_hide_reset_all_hidden"/>

    </LinearLayout>
    <TextView
        android:id="@+id/settings_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        />
</RelativeLayout>
